--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Header -->
     <header>
         <div class="container">
-            <h1>Finance Planner</h1>
+            <h1>Expense Tracker</h1>
         </div>
     </header>
 
@@ -30,15 +30,18 @@
                 <div class="summary">
                     <div class="card income">
                         <h3>Total Income</h3>
-                        <p id="total-income">$0.00</p>
+                        <p id="total-income">0.00Rs</p>
                     </div>
                     <div class="card expenses">
                         <h3>Total Expenses</h3>
-                        <p id="total-expenses">$0.00</p>
+                        <p id="total-expenses">0.00Rs</p>
+                        <button id="delete-expenses-btn" class="btn delete-btn">
+                            <i class="fas fa-trash-alt"></i> Delete All
+                        </button>
                     </div>
                     <div class="card balance">
                         <h3>Balance</h3>
-                        <p id="balance">$0.00</p>
+                        <p id="balance">0.00Rs</p>
                     </div>
                 </div>
                 
@@ -65,7 +68,7 @@
                         <input type="text" id="category" name="category" placeholder="e.g., Salary, Groceries" required>
                     </div>
                     <div class="form-group">
-                        <label for="amount">Amount ($)</label>
+                        <label for="amount">Amount (Rs)</label>
                         <input type="number" id="amount" name="amount" min="0.01" step="0.01" placeholder="e.g., 500.00" required>
                     </div>
                     <div class="form-group">
@@ -88,21 +91,20 @@
                         <tr>
                             <th>Type</th>
                             <th>Category</th>
-                            <th>Amount ($)</th>
+                            <th>Amount (Rs)</th>
                             <th>Date</th>
                             <th>Description</th>
                             <th>Actions</th>
                         </tr>
                     </thead>
                     <tbody id="entries-body">
-                        <!-- Entries will be dynamically inserted here -->
+                        
                     </tbody>
                 </table>
             </section>
         </div>
     </main>
 
-    <!-- Edit Entry Modal -->
     <div id="edit-modal" class="modal">
         <div class="modal-content">
             <span class="close-button">&times;</span>
@@ -121,7 +123,7 @@
                     <input type="text" id="edit-category" name="edit-category" placeholder="e.g., Salary, Groceries" required>
                 </div>
                 <div class="form-group">
-                    <label for="edit-amount">Amount ($)</label>
+                    <label for="edit-amount">Amount (Rs)</label>
                     <input type="number" id="edit-amount" name="edit-amount" min="0.01" step="0.01" placeholder="e.g., 500.00" required>
                 </div>
                 <div class="form-group">
