--- a/index.html
+++ b/index.html
@@ -3,29 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Finance Planner</title>
-    <!-- Google Fonts -->
+    <title>Expense Tracker</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <!-- Font Awesome for Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTTXRN6L7jZF+EjujzDHl0gNVnPKIy3Kh2V4hkTwrdk6ebGmBr3yYmSITyGFYtpB+1AnNKeP9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- CSS Styles -->
     <link rel="stylesheet" href="styles.css">
-    <!-- Chart.js CDN -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2"></script>
 </head>
 <body>
-
-    <!-- Header -->
     <header>
         <div class="container">
             <h1>Expense Tracker</h1>
         </div>
     </header>
-
-    <!-- Main Content -->
     <main>
         <div class="container">
-            <!-- Dashboard Summary -->
             <section class="dashboard">
                 <div class="summary">
                     <div class="card income">
@@ -35,24 +27,17 @@
                     <div class="card expenses">
                         <h3>Total Expenses</h3>
                         <p id="total-expenses">0.00Rs</p>
-                        <button id="delete-expenses-btn" class="btn delete-btn">
-                            <i class="fas fa-trash-alt"></i> Delete All
-                        </button>
                     </div>
                     <div class="card balance">
                         <h3>Balance</h3>
                         <p id="balance">0.00Rs</p>
                     </div>
                 </div>
-                
-                <!-- Financial Overview Chart -->
                 <div class="chart-container">
                     <h2>Financial Overview</h2>
                     <canvas id="finance-chart"></canvas>
                 </div>
             </section>
-
-            <!-- Add Entry Form -->
             <section class="add-entry">
                 <h2>Add New Entry</h2>
                 <form id="entry-form">
@@ -83,7 +68,7 @@
                 </form>
             </section>
 
-            <!-- Entries List -->
+
             <section class="entries">
                 <h2>Financial Entries</h2>
                 <table>
@@ -104,7 +89,6 @@
             </section>
         </div>
     </main>
-
     <div id="edit-modal" class="modal">
         <div class="modal-content">
             <span class="close-button">&times;</span>
@@ -138,17 +122,6 @@
             </form>
         </div>
     </div>
-
-    <!-- Footer -->
-    <footer>
-        <div class="container">
-            <p>&copy; 2024 Finance Planner. All rights reserved.</p>
-        </div>
-    </footer>
-
-    <!-- JavaScript -->
     <script src="app.js"></script>
 </body>
 </html>
-
-
